# cg2

./: .cproject  .gitignore  .project  CMakeLists.txt  README.md  imgui.ini
glfw/: glfwtest.cpp
glfw_glad/: glfw_glad.cpp
include/: app.h  camera.hpp  kdtree.h  off_files.hpp  shader.hpp  utils.h  window.hpp
kdtree/: main.cc
playground/: main.cc  pykdtree2.py  simple_pykdtree.py  vector.cc  vector.h
resources/: blinnphong.shader  circle_landscape.off  cube_sculpt.off  custom_landscape.off  default.shader  flat.shader  normal.shader  shadeless_color.shader  suzanne_noisy.off  varying_density.off
source/: CMakeLists.txt  app.cpp  app.h  app.hpp  bezier_curve.hpp  bounding_box.cc  bounding_box.h  bounding_box.hpp  camera.cpp  camera.hpp  gpu_mesh.hpp  implicit_curve.hpp  implicit_surface.hpp  implicit_surface_viewer.hpp  kdtree.cc  kdtree.h  kdtree.hpp  kdtree_viewer.hpp  main.cc  main.cpp  mesh.hpp  mesh_smoothing_utils.hpp  mesh_smoothing_viewer.hpp  mesh_utils.hpp  off_files.cpp  off_files.hpp  ogl.hpp  parametric_surface_utils.hpp  parametric_surface_viewer.hpp  random.h  random.hpp  ray.hpp  raycaster.hpp  resources.hpp  shader.cpp  shader.hpp  shaders.hpp  testshader.shader  timer.cpp  timer.h  (+8 more)
source/apps/: exercise1.cpp  exercise2.cpp  exercise3.cpp  exercise4.cpp
source/intern/: app.cpp  bezier_curve.cpp  camera.cpp  gpu_mesh.cpp  implicit_curve.cpp  implicit_surface.cpp  implicit_surface_viewer.cpp  kdtree_viewer.cpp  main.cpp  mesh.cpp  mesh_smoothing_utils.cpp  mesh_smoothing_viewer.cpp  mesh_utils.cpp  off_files.cpp  parametric_surface_utils.cpp  parametric_surface_viewer.cpp  random.cpp  resources.cpp  shader.cpp  shaders.cpp  timer.cpp  utils.cpp  window.cpp  window_controller.cpp
theory/ex1/: aufgabe1.tex  aufgabe2.tex  aufgabe3.tex  aufgabe4.tex  aufgabe5.tex  bsplines.py  main.tex
theory/ex2/: aufgabe1.tex  aufgabe2.tex  aufgabe3.tex  main.tex
theory/ex3/: aufgabe1.tex  aufgabe2.tex  aufgabe3.tex  aufgabe4.tex  aufgabe5.tex  main.tex
theory/ex4/: aufgabe1.tex  aufgabe2.tex  aufgabe3.tex  main.tex
theory/template/: aufgabe1.tex  aufgabe2.tex  aufgabe3.tex  aufgabe5.tex  main.tex
